# fastapi-fullstack-cicd

./: .commitlintrc.js  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  QA.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: user.py
app/db/: base.py  base_class.py  session.py
app/models/: user.py
app/schemas/: user.py
tests/: conftest.py  test_health.py  test_users.py
tests/integration/: test_users_integration.py
tests/regression/: test_users_regression.py
tests/unit/: test_users_unit.py
